# matchr

./: Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
benches/: string_matching.rs
benchmarks/: README.md  bench_python.py  demo.ipynb  plot_results.py
python/matchr/: __init__.py  __init__.pyi
src/: jaro_winkler.rs  levenshtein.rs  lib.rs  normalize.rs  python.rs  token.rs  trigram.rs
