[package]
name = "matchr-rs"
version = "0.1.3"
edition = "2021"
description = "Fast fuzzy string matching — Levenshtein, Jaro-Winkler, and trigram similarity. Usable from Rust and Python."
license = "MIT"
repository = "https://github.com/mommo-codes/matchr"
homepage = "https://github.com/mommo-codes/matchr"
documentation = "https://docs.rs/matchr-rs"
readme = "README.md"
keywords = ["fuzzy", "string-matching", "levenshtein", "jaro-winkler", "similarity"]
categories = ["algorithms", "text-processing"]

[lib]
name = "matchr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rayon = "1"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "string_matching"
harness = false